# sql_start_6_hm

HOME_6/: conect.py  dz_Comand  home_6_Web.db  new_while_dz6.py  pyproject.toml
