[tool.poetry]
name = "home-6"
version = "0.1.0"
description = ""
authors = ["Іван Лубик <126516121+ivanlubyk@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "home_6"}]

[tool.poetry.dependencies]
python = "^3.11"
pymysql = "^1.0.3"
cryptography = "^41.0.1"
psycopg2 = "^2.9.6"
faker = "^18.10.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
